<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.keycloak</groupId>
        <artifactId>keycloak-parent</artifactId>
        <version>20.0.5</version>
        <relativePath />
    </parent>

    <groupId>io.cloudtrust</groupId>
    <artifactId>kc-cloudtrust-module</artifactId>
    <version>20.0.5-SNAPSHOT</version>
    <description>Parent for keycloak modules</description>
    <packaging>pom</packaging>

    <modules>
        <module>kc-cloudtrust-common</module>
    </modules>

    <properties>
        <keycloak.version>20.0.5</keycloak.version>
        <flatbuffers.version>1.10.0</flatbuffers.version>
        <apache-collections.version>4.4</apache-collections.version>
        <libphonenumber.version>8.13.7</libphonenumber.version>
        <java.version>17</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>

        <mockito.version>5.1.1</mockito.version>
        <junit.version>5.9.2</junit.version>
        <version.pmd.plugin>3.13.0</version.pmd.plugin>
        <version.jboss.maven.plugin>7.9.Final</version.jboss.maven.plugin>
        <version.wildfly.maven.plugin>2.0.2.Final</version.wildfly.maven.plugin>
        <version.frontend.maven.plugin>1.12.1</version.frontend.maven.plugin>
        <jacoco.version>0.8.8</jacoco.version>
        <spotbugs.version>4.7.3.3</spotbugs.version>
        <fb-contrib.version>7.6.0</fb-contrib.version>
        <findsecbugs.version>1.12.0</findsecbugs.version>
        <owasp-check.version>8.2.1</owasp-check.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <distributionManagement>
        <repository>
            <id>project-release</id>
            <url>https://artifactory.svc.elca.ch/artifactory/${releaseRepository}</url>
        </repository>
        <snapshotRepository>
            <id>project-snapshot</id>
            <url>https://artifactory.svc.elca.ch/artifactory/${snapshotRepository}</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>project-release</id>
            <url>https://artifactory.svc.elca.ch/artifactory/prj_cloudtrust_release</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>project-snapshot</id>
            <url>https://artifactory.svc.elca.ch/artifactory/prj_cloudtrust_snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.cloudtrust</groupId>
                <artifactId>cloudtrust-common</artifactId>
                <version>4.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>io.cloudtrust</groupId>
                <artifactId>kc-cloudtrust-common</artifactId>
                <version>20.0.5-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-core</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-common</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-server-spi</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-server-spi-private</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-services</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-saml-core</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-saml-core-public</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-model-jpa</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-model-legacy</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-model-legacy-private</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-model-infinispan</artifactId>
                <version>${keycloak.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.resteasy</groupId>
                <artifactId>resteasy-jaxrs</artifactId>
                <version>${resteasy.version}</version>
                <scope>provided</scope>
                <exclusions>
                    <exclusion>
                        <artifactId>log4j</artifactId>
                        <groupId>log4j</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>slf4j-api</artifactId>
                        <groupId>org.slf4j</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>slf4j-simple</artifactId>
                        <groupId>org.slf4j</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Keycloak dependencies -->
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-core</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-common</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.1.1</version>
                    <executions>
                        <execution>
                            <id>default-package</id>
                            <phase>package</phase>
                            <goals>
                                <goal>single</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <appendAssemblyId>false</appendAssemblyId>
                        <descriptors>
                            <descriptor>assembly.xml</descriptor>
                        </descriptors>
                        <tarLongFileMode>posix</tarLongFileMode>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>${spotbugs.version}</version>
                    <configuration>
                        <effort>Max</effort>
                        <threshold>Low</threshold>
                        <plugins>
                            <plugin>
                                <groupId>com.mebigfatguy.fb-contrib</groupId>
                                <artifactId>fb-contrib</artifactId>
                                <version>${fb-contrib.version}</version>
                            </plugin>
                            <plugin>
                                <groupId>com.h3xstream.findsecbugs</groupId>
                                <artifactId>findsecbugs-plugin</artifactId>
                                <version>${findsecbugs.version}</version>
                            </plugin>
                        </plugins>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.owasp</groupId>
                    <artifactId>dependency-check-maven</artifactId>
                    <version>${owasp-check.version}</version>
                    <configuration>
                        <format>XML</format>
                        <failOnError>false</failOnError>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>3.0.0-M7</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
